frontend/app/src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i');
@import url('https://rsms.me/inter/inter-ui.css');
html {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
}
body {
  margin: 0;
  font-family: 'Inter UI', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI',
    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
    'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

img {
  border-style: none;
}
/* start Mo styles */

html,
body {
  overflow-y: scroll;
  overflow-x: hidden;
  height: 100%;
}

.app {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.communities {
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  min-height: 900px;
  width: 100%;
}

@media (min-width: 768px) {
  .communities {
    max-width: 790px;
  }
}

@media (min-width: 1280px) {
  .communities {
    max-width: 1200px;
  }
}

.header {
  border-bottom: 1px solid #cccccc63;
}

.tag-box {
  width: 30px;
  height: 30px;
  border-radius: 15px;
  position: relative;
}

.tag-box svg {
  width: 30px;
  height: 17px;
  position: absolute;
  top: 6px;
}

.flip-card {
  background-color: transparent;
  width: 600px;
  min-height: 590px;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.flip-card.active .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-back {
  transform: rotateY(180deg);
}

.flip-card .close-btn:hover {
  background-color: #cccccc57;
}

.loader {
  border-top-color: #151e27;
  -webkit-animation: spinner 1.5s linear infinite;
  animation: spinner 1.5s linear infinite;
}

@-webkit-keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* end Mo styles */

